# yuzuki-backend

./: .gitignore  README.md  auth.py  database.py  main.py  models.py  ollama_service.py  pyproject.toml  requirements.txt  schemas.py  test_ollama.py  test_ws_workflow.py
app/api/: common.py
app/api/routes/: chat.py  messages.py  root.py  sessions.py  voice.py  websocket.py
app/core/: auth.py  dependencies.py  logging.py  security.py  settings.py
app/crud/: message.py
app/db/: database.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: ollama_service.py  tts_service.py
crud/: message.py
