[project]
name = "yuzuki-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.15.6",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.48",
    "style-bert-vits2>=2.5.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]
